--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
   <div class="colors1">
-    <p class="parent"><strong>Employment Of Different Sections</strong></p>
+    <p class="parent"><strong>Employment Of Different Sections-Encouraging youth for better employment</strong></p>
     <nav class="parent1">
        <a href="#educationid">Education sector</a>
        <a href="#medicalsector">Medical sector</a>
